--- a/src/app/main/role/role.component.html
+++ b/src/app/main/role/role.component.html
@@ -21,28 +21,9 @@
       <div class="x_title">
         <ul class="nav navbar-right panel_toolbox">
           <li>
-            <a class="collapse-link">
-              <i class="fa fa-chevron-up"></i>
-            </a>
+            <button class="btn btn-success" (click)="showAddModal()">Add Role!</button>
           </li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-              <i class="fa fa-wrench"></i>
-            </a>
-            <ul class="dropdown-menu" role="menu">
-              <li>
-                <a href="#">Settings 1</a>
-              </li>
-              <li>
-                <a href="#">Settings 2</a>
-              </li>
-            </ul>
-          </li>
-          <li>
-            <a class="close-link">
-              <i class="fa fa-close"></i>
-            </a>
-          </li>
+
         </ul>
         <div class="clearfix"></div>
       </div>
@@ -61,10 +42,10 @@
               <td>{{role.Name}}</td>
               <td>{{role.Description}}</td>
               <td>
-                <button class="btn btn-primary">
+                <button class="btn btn-primary" (click)="showEditModal(role.Id)">
                   <i class="fa fa-pencil-square-o"></i>
                 </button>
-                <button class="btn btn-danger">
+                <button class="btn btn-danger" (click)="deleteRole(role.Id)">
                   <i class="fa fa-trash"></i>
                 </button>
 
@@ -72,7 +53,55 @@
             </tr>
           </tbody>
         </table>
-
+        <div class="col-md-12">
+          <pagination [boundaryLinks]="true" [itemsPerPage]="pageSize" (pageChanged)="pageChanged($event)" [totalItems]="totalRow"
+            [(ngModel)]="pageIndex" class="pagination-sm" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;"></pagination>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!--Modal add and edit-->
+<div bsModal #modalAddEdit="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title pull-left">Add/Edit Role</h4>
+        <button type="button" class="close pull-right" (click)="modalAddEdit.hide()" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal form-label-left" novalidate #addEditForm="ngForm" (ngSubmit)="saveChange(addEditForm.valid)"
+          *ngIf="entity">
+          <div class="form-group">
+            <label class="control-label col-md-3 col-sm-3 col-xs-12">RoleName</label>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <input type="hidden" [(ngModel)]="entity.Id" name="id" />
+              <input type="text" #name="ngModel" [(ngModel)]="entity.Name" required minlength="3" name="name" class="form-control">
+              <small [hidden]="name.valid || (name.pristine && !addEditForm.submitted)" class="text-danger">
+                Required than more three characters!
+              </small>
+            </div>
+          </div>
+          <div class="form-group">
+            <label class="control-label col-md-3 col-sm-3 col-xs-12">Discriptions</label>
+            <div class="col-md-9 col-sm-9 col-xs-12">
+              <textarea class="form-control" #description="ngModel" required [(ngModel)]="entity.Description" name="description" rows="3"></textarea>
+              <small [hidden]="description.valid || (description.pristine && !addEditForm.submitted)" class="text-danger">
+                Required Discriptions!
+              </small>
+            </div>
+          </div>
+          <div class="ln_solid"></div>
+          <div class="form-group">
+            <div class="col-md-9 col-sm-9 col-xs-12 col-md-offset-3">
+              <button type="button" (click)="modalAddEdit.hide()" class="btn btn-primary">Cancel</button>
+              <button type="submit" class="btn btn-success" [disabled]="!addEditForm.form.valid">Submit</button>
+            </div>
+          </div>
+        </form>
       </div>
     </div>
   </div>
