--- a/src/app/main/role/role.component.html
+++ b/src/app/main/role/role.component.html
@@ -32,8 +32,8 @@
         <table class="table table-bordered">
           <thead>
             <tr>
-              <th>RoleID</th>
               <th>RoleName</th>
+              <th>Discription</th>
               <th style="width: 10%;"></th>
             </tr>
           </thead>
