--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,10 +3,11 @@
     <div class="col-md-3 left_col">
       <div class="left_col scroll-view">
         <div class="navbar nav_title" style="border: 0;">
-          <a href={{user.avatar}} class="site_title">
+          <a href="index.html" class="site_title">
             <i class="fa fa-paw"></i>
-            <span>Online Shop!</span>
+            <span>Shop Online!</span>
           </a>
+
         </div>
 
         <div class="clearfix"></div>
@@ -14,7 +15,7 @@
         <!-- menu profile quick info -->
         <div class="profile">
           <div class="profile_pic">
-            <img src={{user.avatar}} alt="..." class="img-circle profile_img">
+            <img src="{{baseFolder}}{{user.avatar}}" alt="..." class="img-circle profile_img">
           </div>
           <div class="profile_info">
             <span>Welcome,</span>
@@ -295,7 +296,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li class="">
               <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                <img src={{user.avatar}} alt="">{{user.fullName}}
+                <img src="{{baseFolder}}{{user.avatar}}" alt="">{{user.fullName}}
                 <span class=" fa fa-angle-down"></span>
               </a>
               <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -327,7 +328,7 @@
                 <li>
                   <a>
                     <span class="image">
-                      <img src={{user.avatar}} alt="Profile Image" />
+                      <img src="{{baseFolder}}{{user.avatar}}" alt="Profile Image" />
                     </span>
                     <span>
                       <span>{{user.fullName}}</span>
@@ -341,7 +342,7 @@
                 <li>
                   <a>
                     <span class="image">
-                      <img src={{user.avatar}} alt="Profile Image" />
+                      <img src="{{baseFolder}}{{user.avatar}}" alt="Profile Image" />
                     </span>
                     <span>
                       <span>{{user.fullName}}</span>
@@ -355,7 +356,7 @@
                 <li>
                   <a>
                     <span class="image">
-                      <img src={{user.avatar}} alt="Profile Image" />
+                      <img src="{{baseFolder}}{{user.avatar}}" alt="Profile Image" />
                     </span>
                     <span>
                       <span>{{user.fullName}}</span>
@@ -369,7 +370,7 @@
                 <li>
                   <a>
                     <span class="image">
-                      <img src={{user.avatar}} alt="Profile Image" />
+                      <img src="{{baseFolder}}{{user.avatar}}" alt="Profile Image" />
                     </span>
                     <span>
                       <span>{{user.fullName}}</span>
