--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -48,8 +48,11 @@
               <td>{{user.Email}}</td>
               <td>{{user.Birthday}}</td>
               <td>{{user.PhoneNumber}}</td>
-              <td>
+              <!-- <td>
                 <img [src]="user.Avatar" class="small-image" />
+              </td> -->
+              <td>
+                <img [src]="baseFolder + user.Avatar" class="img-responsive" width="128" />
               </td>
               <td>
                 <button class="btn btn-primary" (click)="showEditModal(user.Id)">
@@ -154,20 +157,20 @@
           <div class="form-group">
             <label class="control-label col-md-3 col-sm-3 col-xs-12">Avatar</label>
             <div class="col-md-6 col-sm-6 col-xs-12">
-              <input type="file" #avatar name="avatar" >
+              <input type="file" #avatar name="avatar">
               <p class="help-block label label-danger"> Just supported format *.png, *.jpg, *.jpeg </p>
               <input type="hidden" [(ngModel)]="entity.Avatar" name="avatarUrl" />
             </div>
 
             <div class="col-md-3 col-sm-3 col-xs-12" *ngIf="entity.Avatar">
-              <img [src]="entity.Avatar" width="128" />
+              <img [src]="baseFolder+entity.Avatar" width="128" />
             </div>
           </div>
           <div class="form-group">
             <label class="control-label col-md-3 col-sm-3 col-xs-12">BirthDay</label>
             <div class="col-md-9 col-sm-9 col-xs-12">
-              <input type="text" #birthday="ngModel" daterangepicker [options]="dateOptions" [(ngModel)]="entity.BirthDay" name="birthday"
-                class="form-control">
+              <input type="text" #birthday="ngModel" daterangepicker (selected)="selectedDate($event)" [options]="dateOptions" [(ngModel)]="entity.BirthDay"
+                name="birthday" class="form-control">
             </div>
           </div>
           <div class="form-group">
