--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -46,7 +46,7 @@
               <td>{{user.UserName}}</td>
               <td>{{user.FullName}}</td>
               <td>{{user.Email}}</td>
-              <td>{{user.Birthday}}</td>
+              <td>{{user.BirthDay | date:'dd/MM/yyyy'}}</td>
               <td>{{user.PhoneNumber}}</td>
               <!-- <td>
                 <img [src]="user.Avatar" class="small-image" />
