--- a/src/app/main/user/user.component.html
+++ b/src/app/main/user/user.component.html
@@ -21,7 +21,7 @@
       <div class="x_title">
         <ul class="nav navbar-right panel_toolbox">
           <li>
-            <button class="btn btn-success" (click)="showAddModal()">Add User</button>
+            <button *ngIf="_authenService.hasPermission('USER','create')" class="btn btn-success" (click)="showAddModal()">Add new</button>
           </li>
 
         </ul>
@@ -55,12 +55,14 @@
                 <img [src]="baseFolder + user.Avatar" class="img-responsive" width="128" />
               </td>
               <td>
-                <button class="btn btn-primary" (click)="showEditModal(user.Id)">
+                <button class="btn btn-primary" *ngIf="_authenService.hasPermission('USER','update')" (click)="showEditModal(user.Id)">
                   <i class="fa fa-pencil-square-o"></i>
                 </button>
-                <button class="btn btn-danger" (click)="deleteItem(user.Id)">
+                <button class="btn btn-danger" *ngIf="_authenService.hasPermission('USER','delete')" (click)="deleteItem(user.Id)">
                   <i class="fa fa-trash"></i>
                 </button>
+
+
 
               </td>
             </tr>
